# Movie_Data_Warehouse_with_Recommender_System

./: .dockerignore  .gitignore  Dockerfile  Models.py  README.md  app.py  index.html  main.py  movie_actors.csv  movie_director.csv  movies.csv  pyproject.toml  pyvenv.cfg  recommender.py  requirements.txt
API_Project/Project/: crud.py  database.py  index.html  main.py  models.py  movie_actors.csv  movie_director.csv  movies.csv  pyvenv.cfg  ratings.csv  schemas.py
API_Project/Project/Scripts/: activate  activate.bat
DWH/: Readme.md
Database_Queries/: readme.md
Database_all_in/Database_Queries/: readme.md
Preprocessing scripts/: Data_transformations.py  Director_transformation.py  To_csv.py  readme.md
Preprocessing_scripts/: Actor_transformation_norm.py  Metadata_Transformations.py  To_csv.py  rating_transformation_norm.py  readme.md
Raw_Data/: readme.md
Recommender_system/: main.py  movie_recommender_api.py  pyproject.toml  readme.md  recommender.py  requirements.txt
Tables/: dbo.MovieActor.sql  dbo.MovieDirector.sql  dbo.Movies.sql  dbo.Ratings.sql  dbo.Reviews.sql  dbo.TagsApplication.sql
config/: base_config.py
recommenders/: faiss_recommender.py
